--- a/package.json
+++ b/package.json
@@ -3,31 +3,12 @@
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
-  "dependencies": {
-    "anymatch": "^3.1.2",
-    "autoprefixer": "^10.4.7",
-    "binary-extensions": "^2.2.0",
-    "braces": "^3.0.2",
-    "chokidar": "^3.5.3",
-    "fill-range": "^7.0.1",
-    "glob-parent": "^5.1.2",
-    "immutable": "^4.1.0",
-    "is-binary-path": "^2.1.0",
-    "is-extglob": "^2.1.1",
-    "is-glob": "^4.0.3",
-    "is-number": "^7.0.0",
-    "normalize-path": "^3.0.0",
-    "picomatch": "^2.3.1",
-    "readdirp": "^3.6.0",
-    "sass": "^1.54.0",
-    "source-map-js": "^1.0.2",
-    "to-regex-range": "^5.0.1"
-  },
   "scripts": {
     "test": "echo \"The script is working\" && exit 1",
-    "sass": "sass --watch style.scss:css/style.css",
+    "sass": "sass --watch style.scss:css/style.css --style compressed",
     "prefix": "postcss css/style.css --use autoprefixer -d css"
   },
   "author": "Younes LAHOUITI",
-  "license": "ISC"
+  "license": "ISC",
+  "browserslist": "latest 4 versions"
 }
